force-app/main/default/objects/MUSW__File__c/fields/MUSW__Attachment__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Attachment__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390)) &amp; MUSW__ObjectId__c , &quot;Link to Attachment&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment</label>
    <type>Text</type>
</CustomField>