force-app/main/default/objects/MUSW__File__c/fields/MUSW__LastPrintedDate__c.field-meta.xml
<CustomField>
    <fullName>MUSW__LastPrintedDate__c</fullName>
    <label>Last Printed Date</label>
    <length>40</length>
    <type>Text</type>
</CustomField>