force-app/main/default/objects/MUSW__File__c/fields/MUSW__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ObjectId__c</fullName>
    <description>currently only attachment id&apos;s</description>
    <externalId>true</externalId>
    <label>Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>