force-app/main/default/objects/MUSW__File__c/fields/MUSW__OwnerName__c.field-meta.xml
<CustomField>
    <fullName>MUSW__OwnerName__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>