force-app/main/default/objects/MUSW__File__c/fields/MUSW__ParentName__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ParentName__c</fullName>
    <label>Parent Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>