force-app/main/default/objects/MUSW__File__c/listViews/clariti__Single_Documents.listView-meta.xml
<ListView>
    <fullName>clariti__Single_Documents</fullName>
    <columns>NAME</columns>
    <columns>MUSW__ParentName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MUSW__SysGen__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>MUSW__LastPrintedDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>Single Documents</label>
</ListView>