force-app/main/default/objects/MUSW__File__c/listViews/MUSW__All1.listView-meta.xml
<ListView>
    <fullName>MUSW__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>