force-app/main/default/objects/MUSW__File__c/listViews/MUSW__Notice_of_Violation.listView-meta.xml
<ListView>
    <fullName>MUSW__Notice_of_Violation</fullName>
    <columns>NAME</columns>
    <columns>MUSW__SysGen__c</columns>
    <columns>MUSW__Attachment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Notice_of_Violation</value>
    </filters>
    <label>Notice of Violation</label>
</ListView>